fix align on md

--- a/pycon_portugal_2022/static/sass/_header.scss
+++ b/pycon_portugal_2022/static/sass/_header.scss
@@ -58,8 +58,8 @@
 
 @media (max-width: 991.98px) {
   .header {
-    padding-right: 0rem;
-    padding-left: 0rem;
+    padding-right: 2rem;
+    padding-left: 2rem;
 
     .container-fluid, .container {
       padding-right: 0rem;
